k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-server
spec:
  template:
    spec:
      # Pod-level security context
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: radio-server
          image: shokohsc/radio-server
          # Container-level security context
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          args:
            - npm
            - run
            - dev
          volumeMounts:
            - name: wd-zarya
              mountPath: /app/music
          resources:
            limits:
              memory: 1024M
      volumes:
        - name: wd-zarya
          nfs:
            server: nfs-wd-zarya.nfs-wd-zarya.svc.cluster.local
            path: /music/tracks
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - zarya
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-ui
spec:
  template:
    spec:
      # Pod-level security context
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 100
        fsGroup: 100
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: radio-ui
          image: shokohsc/radio-ui
          # Container-level security context
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 100
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 1000m
              memory: 2048M
